Stop banner overflow

--- a/pages/_style.scss
+++ b/pages/_style.scss
@@ -132,3 +132,7 @@
   font-weight: 500px;
   font-stretch: normal;
 }
+
+.carousel {
+  overflow:hidden !important;
+}
